--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.0",
     "gsap": "^3.12.2",
+    "i18next": "^23.4.4",
     "next": "13.4.12",
+    "next-intl": "3.0.0-beta.10",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.1.2",
     "react-simple-typewriter": "^5.0.1",
     "swiper": "^10.1.0",
     "tailwindcss": "3.3.3",
