--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     "i18next": "^23.4.4",
     "next": "13.4.12",
     "next-intl": "3.0.0-beta.10",
+    "particle.js": "^1.0.7",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.1.2",
+    "react-particles": "^2.12.2",
     "react-simple-typewriter": "^5.0.1",
     "swiper": "^10.1.0",
     "tailwindcss": "3.3.3",
+    "tsparticles-slim": "^2.12.0",
     "typescript": "5.1.6",
     "typewriter-effect": "^2.20.1"
   },
