--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "react-simple-typewriter": "^5.0.1",
     "swiper": "^10.1.0",
     "tailwindcss": "3.3.3",
+    "three": "^0.155.0",
     "tsparticles-slim": "^2.12.0",
     "typescript": "5.1.6",
     "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
+    "@types/three": "^0.155.0",
     "sass": "^1.64.2"
   }
 }
