[ADD] add engines field to specify required Node.js version

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "portfolio_v2",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.x"
+  },
   "resolutions": {
     "use-intl": "2.22.1"
   },
