--- a/package.json
+++ b/package.json
@@ -36,18 +36,17 @@
     "i18next": "^23.4.4",
     "next": "13.4.12",
     "next-intl": "2.22.1",
-    "particle.js": "^1.0.7",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.1.2",
-    "use-intl": "2.22.1",
     "react-simple-typewriter": "^5.0.1",
     "swiper": "^10.1.0",
     "tailwindcss": "3.3.3",
     "three": "^0.155.0",
     "typescript": "5.1.6",
-    "typewriter-effect": "^2.20.1"
+    "typewriter-effect": "^2.20.1",
+    "use-intl": "2.22.1"
   },
   "devDependencies": {
     "@types/three": "^0.155.0",
